# docs/swagger.json
@@ -49,7 +49,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{\"files\":[]}",
+                        "description": "{\"success\":true,\"data\":{\"fileCount\":0,\"directoryCount\":0}",
                         "schema": {
                             "$ref": "#/definitions/router.Json200Response"
                         }
@@ -301,7 +301,7 @@
                 }
             }
         },
-        "/api/recycle": {
+        "/api/recycleFile": {
             "put": {
                 "security": [
                     {
@@ -336,7 +336,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"success\":true,\"data\":{\"files\":[]}",
+                        "description": "{\"success\":true,\"data\":{\"fileCount\":0,\"directoryCount\":0}",
                         "schema": {
                             "$ref": "#/definitions/router.Json200Response"
                         }
